--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,11 @@ body {
     margin: 0.6rem 0;
 }
 
+#desciption {
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
 #details-container {
     display: flex;
     justify-content: center;
